--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -3,14 +3,14 @@
     <div class="menu">
         <div class="breadcrumbs">
             <h5>
-                <a href="#" routerLink="/catalogo" class="mainBread">CATÁLOGO</a>
+                <a href="#" routerLink="/catalogo" class="mainBread">{{"CATÁLOGO" | translate}}</a>
                 > 
-                <a href="#">TODOS LOS VOLUMENES</a>
+                <a href="#">{{"TODOS LOS VOLUMENES" | translate}}</a>
             </h5>
             <div class="ver">
-                <h3>CATÁLOGO</h3>
+                <h3>{{"CATÁLOGO" | translate}}</h3>
                 <div class="verseries">
-                    <a href="#" routerLink="/series/0"><h4>VER SERIES <i class="bi bi-chevron-down"></i></h4></a>
+                    <a href="#" routerLink="/series/0"><h4>{{"VER SERIES" | translate}} <i class="bi bi-chevron-down"></i></h4></a>
                 </div>
             </div>
         </div>
@@ -33,6 +33,6 @@
             </div>
         </div>
     </div>
-    <pagination-controls (pageChange)="page = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
+    <pagination-controls (pageChange)="page = $event" previousLabel="{{'Anterior' | translate}}" nextLabel="{{'Siguiente' | translate}}"></pagination-controls>
 </div>
 <app-footer></app-footer>
