--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,8 +3,10 @@ footer {
     color: #d0d0d0;
     background-color: #1F2544;
     padding: 30px;
-    padding-left: 300px;
+    gap: 60px;
+    padding-left: 200px;
     padding-right: 300px;
+    padding-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,14 +15,29 @@ footer {
     .footCol{
         display: flex;
         gap: 5px;
-        width: 400px;
+        width: fit-content;
         flex-direction: column;
         justify-content: left;
-        text-align: left;
+        text-align: left;        
 
         .logo{
-            width: 50%;
+            width: 70%;
         }
+    }
+
+    .banderas{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .copyright{
+        width: 250px;
+    }
+
+    p{
+        width:fit-content;
     }
 
     a{
@@ -37,13 +54,38 @@ footer {
     .bandera{
         width: 30px;
         cursor: pointer;
-        margin-right: 10px;
         transition: 0.4s;
     }
     .bandera:hover{
         transition: 0.4s;
         transform: scale(1.3);
     }
+}
+
+.redes{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(3,2fr);
+    row-gap: 30px;
+    column-gap: 20px;
+}
+
+.iconoRedes{
+    color: #1F2544;
+    background-color: #ffffff;
+    width: fit-content;
+    font-size: 15px;
+    padding: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 30px;
+    transition: 0.4s; 
+}
+
+.iconoRedes:hover{
+    transition: 0.4s;
+    background-color: #d5d5d5; 
 }
 
 @media (max-width: 700px) {
