--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -16,7 +16,9 @@
 }
 
 .logo {
-    height: 130px;
+    width: 40%;
+    padding: 0;
+    margin: 0;
     margin-bottom: 10px;
 }
 
@@ -41,7 +43,7 @@
 }
 
 .imagen{
-    padding-left: 30px;
+    padding-left: 0px;
     padding-bottom: 10px;
 }
 
@@ -129,11 +131,16 @@ label{
     margin-bottom: 20px;
     padding: 12px;
     width: 320px;
-   }
+}
+
 
   .iniciarBoton:hover{
       transition: 0.4s;
       background-color: rgb(0, 0, 0);
+  }
+
+  .registerButton{
+    width: 100%;
   }
 
   .form-control:focus {
@@ -142,7 +149,7 @@ label{
     outline: none;
   }
 
-  @media (max-width: 700px) {
+  @media (max-width: 576px) {
     .cuerpo {
         width: 100%;
         display: flex;
@@ -157,6 +164,59 @@ label{
             width: 100%;
         }
 
+        .logo{
+            width: 70%;
+        }
+
+        .botonDiv{
+            width: 100%;
+        }
+
+        .iniciarBoton{
+            width: 100%;
+        }
+
         
     }
   }
+
+
+  @media (max-width: 768px) {
+    .cuerpo {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        .wrapper{
+            width: 100%;
+            padding-top: 40px;
+        }
+
+        .aside{
+            width: 100%;
+        }
+
+        .logo{
+            width: 50%;
+        }
+
+        
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .cuerpo {
+        width: 100%;
+
+        .aside{
+            padding: 10px;
+        }
+
+        .logo{
+            width: 50%;
+        }
+
+        
+    }
+}
+  
