--- a/src/app/components/serie/serie.component.html
+++ b/src/app/components/serie/serie.component.html
@@ -30,6 +30,6 @@
             </div>
         </div>
     </div>
-    <pagination-controls (pageChange)="page = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
+    <pagination-controls (pageChange)="onPageChange($event)" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
 </div>
 <app-footer></app-footer>
