--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -158,18 +158,48 @@ i:hover{
         padding-right: 5px;
         gap: 0px;
 
-        img{
-            width: 180px;
-            margin-left: 0px;
-            margin-right: 84px;
+        a{
+            .logo{
+                width: 100px;
+                margin-left: 0px;
+                margin-right: 0px;
+            }
         }
-        i{
-            font-size: 35px;
+
+        .usuario{
+            i{
+                font-size: 20px;
+                gap: 10px;
+            }
+            .carrito{
+                position: relative;
+                .noCarrito{
+                    bottom: 0;
+                    right: 0;
+                    font-weight: 600;
+                    font-size: 7px;
+                    position: absolute;
+                    background-color: green;
+                    padding: 4px;
+                    padding-left: 6px;
+                    padding-right: 6px;
+                    border-radius: 50px;
+                    transition: 0.4s;
+                }
+                i{
+                    margin-right: 5px;
+                }
+            }
         }
+        
     }
     
     .navbar-brand {
         order: 2; 
+        a{
+            padding: 0px;
+            margin: 0px;
+        }
     }
 
     .navbar-toggler {
@@ -177,7 +207,7 @@ i:hover{
     }
 
     .usuario{
-        gap: 15px;
+        gap: 8px;
         padding-left: 8px;
 
         i{
@@ -187,7 +217,7 @@ i:hover{
 
     .barra{
         img{
-            width: 150px;
+            width: 100px;
             margin-left: 0px;
             margin-right: 65px;
         }
@@ -206,6 +236,24 @@ i:hover{
             border-radius: 50px;
             transition: 0.4s;
             margin-top: 10px;
+        }
+    }
+
+    .inputBusqueda{
+        display: flex;
+        gap: 10px;
+        justify-content: center;
+        padding: 15px;
+    
+        input {
+            width: 95%;
+            height: 40px;
+            font-size: 20px;    
+        }
+    
+        i{
+            font-size: 20px;
+            margin-right: 12px;
         }
     }
 }
