Prueba POST y PUT

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -32,7 +32,7 @@
       <li class="nav-item botonNav">
         <a class="nav-link headerOption" href="#" data-toggle="dropdown" routerLink="/noticias">{{"Noticias" | translate}}</a>
       </li>
-      @if (this.isAdmin == true) {
+      <!-- @if (this.isAdmin == true) { -->
         <li class="nav-item dropdown botonNav">
           <a class="nav-link dropdown-toggle headerOption" data-toggle="dropdown" href="#" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
             {{"Gestión" | translate}}
@@ -43,7 +43,7 @@
             <a class="dropdown-item" routerLink="/noticias-gestion" href="#">{{"Noticias" | translate}}</a>
           </div>
         </li>
-      }
+      <!-- } -->
     </ul>
   </div>
   <div class="usuario">
