--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,25 +5,25 @@
           <div class="carousel-item active">
             <div class="carruselText">
                 <div class="carruselText3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, obcaecati?</p>
-                    <button class="botonDestacado">Leer más</button>
+                    <p>Dioses contra Humanos <br> ¡¡¡Las batallas que deciden el destino del hombre!!!</p>
+                    <button class="botonDestacado botonCarrusel1">Leer más</button>
                 </div>
+            </div>
+            <img src="../../../assets/img/otros/3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <div class="carruselText3">
+                <p>La tribu de los elfos reclama venganza sobre quienes los purgaron. ¡¿Sus aliados son ahora sus enemigos?! </p>
+                <button class="botonDestacado botonCarrusel2">Leer más</button>
             </div>
             <img src="../../../assets/img/otros/2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <div class="carruselText3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, obcaecati?</p>
-                <button class="botonDestacado">Leer más</button>
+                <p> Veneno contra Spiderman, una vez más... ¡pero como si fuera por primera vez! Eddie Brock se enfrenta a un trepamuros diferente al que conoce.</p>
+                <button class="botonDestacado botonCarrusel3">Leer más</button>
             </div>
             <img src="../../../assets/img/otros/1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <div class="carruselText3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, obcaecati?</p>
-                <button class="botonDestacado">Leer más</button>
-            </div>
-            <img src="../../../assets/img/otros/3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -36,7 +36,6 @@
         </button>
     </div>
 </div>
-
 <div class="cuerpo">
     <div class="catalogo">
         <h3>{{"Novedades Recientes" | translate}}</h3>
@@ -73,8 +72,8 @@
                     <img src="../../../assets/img/otros/Novedad2.jpg" alt="">
                 </div>
                 <div class="textoNov1">
-                    <h3>SCOTT PILGRIM</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolore aliquam aspernatur excepturi qui illum, odit deleniti soluta illo consequuntur?</p>
+                    <h3>MASACRE ABSOLUTA</h3>
+                    <p>¡La ola sádica del simbionte asesino en serie comienza aquí! Como si Venom no fuera lo suficientemente letal, ¿imagina qué pasaría si su "otro" simbiótico se hubiera unido a un psicópata asesino? Ahí es donde entra Cletus Kasady.</p>
                 </div>
             </div>
         </div>
@@ -85,7 +84,7 @@
                 </div>
                 <div class="textoNov2">
                     <h3>DANDADAN</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut odio quo corrupti harum itaque consectetur quasi inventore aliquid est saepe.</p>
+                    <p>Esta entretenida historia de extraterrestres y fantasmas te dejará con ganas de más desde su primer capítulo. Oculto, un friki que cree en los ovnis, y Ayase, su compañera criada por una abuela médium, vivirán una historia que les hará cuestionarse todo lo que han creído hasta el momento.</p>
                 </div>
             </div>
             <div class="novedad" routerLink="/series/2">
@@ -94,7 +93,7 @@
                 </div>
                 <div class="textoNov3">
                     <h3>FULL METAL ALCHEMIST BROTHERHOOD</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aperiam iste distinctio corrupti totam odit quibusdam in rem, enim fuga!</p>
+                    <p>Cuando tan solo eran unos niños, los hermanos Edward y Alphonse Elric usaron la alquimia para cometer un pecado capital: intentar la transmutación humana, pero no se resignan a su destino y están dispuestos a recuperar sus cuerpos.</p>
                 </div>
             </div>
         </div>
@@ -135,42 +134,38 @@
 </div>
 <div class="resaltados">
     <div class="destacado">
-        <img src="../../../assets/img/otros/destacado1.jpg">
-        <div class="destacadoTitle">
-            <h3>Titulo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Sequi quis ea ullam voluptates ipsa doloribus 
-                reiciendis molestias consectetur praesentium a.
-                Lorem ipsum dolor sit amet consectetur.
+        <img src="../../../assets/img/otros/destacado3.jpg">
+        <div class="destacadoTitle3">
+            <h3>HELLBOY 31. HELLBOY Y LA AIDP: 1957 </h3>
+            <p>NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP</p>
+            <p>Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. 
+                Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de 
+                la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.
             </p>
-            <button class="botonDestacado">{{"Leer más" | translate}}</button>
+            <button class="botonDestacado boton2">Leer más</button>
         </div>
     </div>
     <div class="destacado">
         <div class="destacadoTitle2">
-            <h3>Titulo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Sequi quis ea ullam voluptates ipsa doloribus 
-                reiciendis molestias consectetur praesentium a.
-                Lorem ipsum dolor sit amet consectetur.
+            <h3>Blue Lock nº 18</h3>
+            <p>¡Comienza la segunda fase del proyecto BLUE LOCK!</p>
+            <p>¡Los egoístas lucharán en aún más campos de batalla!
+                Tras ganar el gran partido contra la selección japonesa de Sub-20, Isagi y el resto de chicos de BLUE LOCK se han convertido en auténticos héroes.
+                ¡Mientras los delanteros gozan de unas breves vacaciones, Jinpachi Ego ya les está preparando un nuevo desafío!
             </p>
-            <button class="botonDestacado">Leer más</button>
+            <button class="botonDestacado boton1">Leer más</button>
         </div>
         <img src="../../../assets/img/otros/destacado2.jpg">
     </div>
     <div class="destacado">
-        <img src="../../../assets/img/otros/destacado3.jpg">
-        <div class="destacadoTitle3">
-            <h3>Titulo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Sequi quis ea ullam voluptates ipsa doloribus 
-                reiciendis molestias consectetur praesentium a.
-                Lorem ipsum dolor sit amet consectetur.
+        <img src="../../../assets/img/otros/destacado1.jpg">
+        <div class="destacadoTitle">
+            <h3>One Piece nº 108</h3>
+            <p>¡¡Aquí tenéis una historia de piratas que buscan el gran tesoro, el One Piece!!</p>
+            <p>La banda del Sombrero de paja llega a la isla del futuro Egghead. ¡Allí está el laboratorio del doctor Vegapunk, donde el corazón 
+                aventurero de Luffy palpita con fuerza al ver tecnologías desconocidas! ¡Pero ahí llega el CP-0 para eliminar a Vegapunk! 
             </p>
-            <button class="botonDestacado">Leer más</button>
+            <button class="botonDestacado boton3">{{"Leer más" | translate}}</button>
         </div>
     </div>
 </div> 
