--- a/src/app/components/buscar-libros/buscar-libros.component.css
+++ b/src/app/components/buscar-libros/buscar-libros.component.css
@@ -22,6 +22,16 @@
         transition: 0.4s;
         box-shadow: -9px 5px 5px 2px rgb(180, 180, 180);
     }
+    .detallesLibro{
+        .titulo{
+            a{
+                width: 100%;
+                word-wrap: break-word;  
+                white-space: normal;
+            }
+            
+        }
+    }
 }
 
 
