--- a/src/app/components/catalogo/catalogo.component.css
+++ b/src/app/components/catalogo/catalogo.component.css
@@ -22,6 +22,16 @@
         transition: 0.4s;
         box-shadow: -9px 5px 5px 2px rgb(180, 180, 180);
     }
+    .detallesLibro{
+        .titulo{
+            a{
+                width: 100%;
+                word-wrap: break-word;  
+                white-space: normal;
+            }
+            
+        }
+    }
 }
 
 
@@ -114,6 +124,16 @@
             transition: 0.4s;
             box-shadow: -9px 5px 5px 2px rgb(180, 180, 180);
         }
+        .detallesLibro{
+            .titulo{
+                a{
+                    width: 100%;
+                    word-wrap: break-word;  
+                    white-space: normal;
+                }
+                
+            }
+        }
     }
 }
 
@@ -141,6 +161,16 @@
             transition: 0.4s;
             box-shadow: -9px 5px 5px 2px rgb(180, 180, 180);
         }
+        .detallesLibro{
+            .titulo{
+                a{
+                    width: 100%;
+                    word-wrap: break-word;  
+                    white-space: normal;
+                }
+                
+            }
+        }
     }
 }
 
@@ -167,6 +197,16 @@
             width: 200px;
             transition: 0.4s;
             box-shadow: -9px 5px 5px 2px rgb(180, 180, 180);
+        }
+        .detallesLibro{
+            .titulo{
+                a{
+                    width: 100%;
+                    word-wrap: break-word;  
+                    white-space: normal;
+                }
+                
+            }
         }
     }
 }
