--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="carruselBox">
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active carrusel1">
             <div class="carruselText">
                 <div class="carruselText3">
                     <p>Dioses contra Humanos <br> ¡¡¡Las batallas que deciden el destino del hombre!!!</p>
